src/grammar/sparql/SPARQLParser.js
// Generated from src/grammar/sparql/SPARQLParser.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import SPARQLParserListener from './SPARQLParserListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class SPARQLParser extends antlr4.Parser {

    static grammarFileName = "SPARQLParser.g4";
    static literalNames = [ null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            "'a'", null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, "'^^'", 
                            "'<='", "'>='", "'!='", "'&&'", "'||'", "'^'", 
                            "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", 
                            "'.'", "'+'", "'-'", "'*'", "'?'", "','", "'!'", 
                            "'/'", "'='", "'<'", "'>'", "'|'" ];
    static symbolicNames = [ null, "WS", "BASE", "PREFIX", "SELECT", "DISTINCT", 
                             "REDUCED", "CONSTRUCT", "DESCRIBE", "ASK", 
                             "FROM", "NAMED", "WHERE", "ORDER", "BY", "ASC", 
                             "DESC", "LIMIT", "OFFSET", "VALUES", "OPTIONAL", 
                             "GRAPH", "UNION", "FILTER", "A", "STR", "LANG", 
                             "LANGMATCHES", "DATATYPE", "BOUND", "SAMETERM", 
                             "ISIRI", "ISURI", "ISBLANK", "ISLITERAL", "REGEX", 
                             "SUBSTR", "TRUE", "FALSE", "SILENT", "ALL", 
                             "AS", "GROUP", "HAVING", "UNDEF", "BINDINGS", 
                             "SERVICE", "BIND", "MINUS", "IRI", "URI", "BNODE", 
                             "RAND", "ABS", "CEIL", "FLOOR", "ROUND", "CONCAT", 
                             "STRLEN", "UCASE", "LCASE", "ENCODE_FOR_URI", 
                             "CONTAINS", "STRSTARTS", "STRENDS", "STRBEFORE", 
                             "STRAFTER", "REPLACE", "YEAR", "MONTH", "DAY", 
                             "HOURS", "MINUTES", "SECONDS", "TIMEZONE", 
                             "TZ", "NOW", "UUID", "STRUUID", "MD5", "SHA1", 
                             "SHA256", "SHA384", "SHA512", "COALESCE", "IF", 
                             "STRLANG", "STRDT", "ISNUMERIC", "COUNT", "SUM", 
                             "MIN", "MAX", "AVG", "SAMPLE", "GROUP_CONCAT", 
                             "NOT", "IN", "EXISTS", "SEPARATOR", "ANY", 
                             "SHORTEST", "SIMPLE", "ACYCLIC", "WALKS", "IRIREF", 
                             "PNAME_NS", "PNAME_LN", "BLANK_NODE_LABEL", 
                             "VAR1", "VAR2", "LANGTAG", "INTEGER", "DECIMAL", 
                             "DOUBLE", "INTEGER_POSITIVE", "DECIMAL_POSITIVE", 
                             "DOUBLE_POSITIVE", "INTEGER_NEGATIVE", "DECIMAL_NEGATIVE", 
                             "DOUBLE_NEGATIVE", "STRING_LITERAL1", "STRING_LITERAL2", 
                             "STRING_LITERAL_LONG1", "STRING_LITERAL_LONG2", 
                             "COMMENT", "REFERENCE", "LESS_EQUAL", "GREATER_EQUAL", 
                             "NOT_EQUAL", "AND", "OR", "INVERSE", "OPEN_BRACE", 
                             "CLOSE_BRACE", "OPEN_CURLY_BRACE", "CLOSE_CURLY_BRACE", 
                             "OPEN_SQUARE_BRACKET", "CLOSE_SQUARE_BRACKET", 
                             "SEMICOLON", "DOT", "PLUS_SIGN", "MINUS_SIGN", 
                             "ASTERISK", "QUESTION_MARK", "COMMA", "NEGATION", 
                             "DIVIDE", "EQUAL", "LESS", "GREATER", "PIPE", 
                             "ANY_OTHER" ];
    static ruleNames = [ "query", "prologue", "baseDecl", "prefixDecl", 
                         "selectQuery", "subSelect", "selectClause", "selectModifier", 
                         "selectVariables", "constructQuery", "describeQuery", 
                         "askQuery", "datasetClause", "whereClause", "solutionModifier", 
                         "groupClause", "groupCondition", "havingClause", 
                         "havingCondition", "orderClause", "orderCondition", 
                         "limitOffsetClauses", "limitClause", "offsetClause", 
                         "valuesClause", "triplesTemplate", "groupGraphPattern", 
                         "groupGraphPatternSub", "groupGraphPatternSubList", 
                         "triplesBlock", "graphPatternNotTriples", "optionalGraphPattern", 
                         "graphGraphPattern", "serviceGraphPattern", "bind", 
                         "inlineData", "dataBlock", "inlineDataOneVar", 
                         "inlineDataFull", "dataBlockValues", "dataBlockValue", 
                         "minusGraphPattern", "groupOrUnionGraphPattern", 
                         "filter", "constraint", "functionCall", "argList", 
                         "expressionList", "constructTemplate", "constructTriples", 
                         "triplesSameSubject", "propertyList", "propertyListNotEmpty", 
                         "verb", "objectList", "object", "triplesSameSubjectPath", 
                         "propertyListPath", "propertyListPathNotEmpty", 
                         "propertyListPathNotEmptyList", "verbPath", "verbSimple", 
                         "objectListPath", "objectPath", "path", "pathAlternative", 
                         "pathSequence", "pathElt", "pathEltOrInverse", 
                         "pathMod", "pathQuantity", "pathQuantityExact", 
                         "pathQuantityRange", "pathQuantityMin", "pathQuantityMax", 
                         "pathPrimary", "pathNegatedPropertySet", "pathOneInPropertySet", 
                         "integer", "triplesNode", "blankNodePropertyList", 
                         "triplesNodePath", "blankNodePropertyListPath", 
                         "collection", "collectionPath", "graphNode", "graphNodePath", 
                         "varOrTerm", "varOrIRI", "var", "graphTerm", "nil", 
                         "expression", "conditionalOrExpression", "conditionalAndExpression", 
                         "relationalExpression", "additiveExpression", "rhsAdditiveExpression", 
                         "rhsAdditiveExpressionSub", "multiplicativeExpression", 
                         "unaryExpression", "primaryExpression", "builtInCall", 
                         "regexExpression", "subStringExpression", "strReplaceExpression", 
                         "existsFunction", "notExistsFunction", "aggregate", 
                         "iriOrFunction", "rdfLiteral", "numericLiteral", 
                         "numericLiteralUnsigned", "numericLiteralPositive", 
                         "numericLiteralNegative", "booleanLiteral", "string", 
                         "iri", "prefixedName", "blankNode", "anon" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = SPARQLParser.ruleNames;
        this.literalNames = SPARQLParser.literalNames;
        this.symbolicNames = SPARQLParser.symbolicNames;
    }



	query() {
	    let localctx = new QueryContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, SPARQLParser.RULE_query);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 242;
	        this.prologue();
	        this.state = 247;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 4:
	            this.state = 243;
	            this.selectQuery();
	            break;
	        case 7:
	            this.state = 244;
	            this.constructQuery();
	            break;
	        case 8:
	            this.state = 245;
	            this.describeQuery();
	            break;
	        case 9:
	            this.state = 246;
	            this.askQuery();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 249;
	        this.valuesClause();
	        this.state = 250;
	        this.match(SPARQLParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	prologue() {
	    let localctx = new PrologueContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, SPARQLParser.RULE_prologue);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 256;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===2 || _la===3) {
	            this.state = 254;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 2:
	                this.state = 252;
	                this.baseDecl();
	                break;
	            case 3:
	                this.state = 253;
	                this.prefixDecl();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 258;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	baseDecl() {
	    let localctx = new BaseDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, SPARQLParser.RULE_baseDecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 259;
	        this.match(SPARQLParser.BASE);
	        this.state = 260;
	        this.match(SPARQLParser.IRIREF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	prefixDecl() {
	    let localctx = new PrefixDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, SPARQLParser.RULE_prefixDecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 262;
	        this.match(SPARQLParser.PREFIX);
	        this.state = 263;
	        this.match(SPARQLParser.PNAME_NS);
	        this.state = 264;
	        this.match(SPARQLParser.IRIREF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	selectQuery() {
	    let localctx = new SelectQueryContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, SPARQLParser.RULE_selectQuery);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 266;
	        this.selectClause();
	        this.state = 270;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===10) {
	            this.state = 267;
	            this.datasetClause();
	            this.state = 272;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 273;
	        this.whereClause();
	        this.state = 274;
	        this.solutionModifier();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	subSelect() {
	    let localctx = new SubSelectContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, SPARQLParser.RULE_subSelect);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 276;
	        this.selectClause();
	        this.state = 277;
	        this.whereClause();
	        this.state = 278;
	        this.solutionModifier();
	        this.state = 279;
	        this.valuesClause();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	selectClause() {
	    let localctx = new SelectClauseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, SPARQLParser.RULE_selectClause);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 281;
	        this.match(SPARQLParser.SELECT);
	        this.state = 283;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===5 || _la===6) {
	            this.state = 282;
	            this.selectModifier();
	        }

	        this.state = 291;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 109:
	        case 110:
	        case 133:
	            this.state = 286; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 285;
	                this.selectVariables();
	                this.state = 288; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while(((((_la - 109)) & ~0x1f) === 0 && ((1 << (_la - 109)) & 16777219) !== 0));
	            break;
	        case 143:
	            this.state = 290;
	            this.match(SPARQLParser.ASTERISK);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	selectModifier() {
	    let localctx = new SelectModifierContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, SPARQLParser.RULE_selectModifier);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 293;
	        _la = this._input.LA(1);
	        if(!(_la===5 || _la===6)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	selectVariables() {
	    let localctx = new SelectVariablesContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, SPARQLParser.RULE_selectVariables);
	    try {
	        this.state = 302;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 109:
	        case 110:
	            localctx = new SelectSingleVariableContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 295;
	            this.var_();
	            break;
	        case 133:
	            localctx = new SelectExpressionAsVariableContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 296;
	            this.match(SPARQLParser.OPEN_BRACE);
	            this.state = 297;
	            this.expression();
	            this.state = 298;
	            this.match(SPARQLParser.AS);
	            this.state = 299;
	            this.var_();
	            this.state = 300;
	            this.match(SPARQLParser.CLOSE_BRACE);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	constructQuery() {
	    let localctx = new ConstructQueryContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, SPARQLParser.RULE_constructQuery);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 304;
	        this.match(SPARQLParser.CONSTRUCT);
	        this.state = 328;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 135:
	            this.state = 305;
	            this.constructTemplate();
	            this.state = 309;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===10) {
	                this.state = 306;
	                this.datasetClause();
	                this.state = 311;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 312;
	            this.whereClause();
	            this.state = 313;
	            this.solutionModifier();
	            break;
	        case 10:
	        case 12:
	            this.state = 318;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===10) {
	                this.state = 315;
	                this.datasetClause();
	                this.state = 320;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 321;
	            this.match(SPARQLParser.WHERE);
	            this.state = 322;
	            this.match(SPARQLParser.OPEN_CURLY_BRACE);
	            this.state = 324;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===37 || _la===38 || ((((_la - 105)) & ~0x1f) === 0 && ((1 << (_la - 105)) & 269483967) !== 0) || _la===137) {
	                this.state = 323;
	                this.triplesTemplate();
	            }

	            this.state = 326;
	            this.match(SPARQLParser.CLOSE_CURLY_BRACE);
	            this.state = 327;
	            this.solutionModifier();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


